[gd_scene load_steps=13 format=2]

[ext_resource path="res://Test.gd" type="Script" id=1]
[ext_resource path="res://HBoxContainer.gd" type="Script" id=2]
[ext_resource path="res://Buttons/Exit/Exit1.png" type="Texture" id=3]
[ext_resource path="res://Buttons/Exit/Exit2.png" type="Texture" id=4]
[ext_resource path="res://Buttons/Exit/Exit3.bmp" type="BitMap" id=5]
[ext_resource path="res://Buttons/File/One1.png" type="Texture" id=6]
[ext_resource path="res://Buttons/File/One2.png" type="Texture" id=7]
[ext_resource path="res://Buttons/File/One3.bmp" type="BitMap" id=8]
[ext_resource path="res://Buttons/File/Two1.png" type="Texture" id=9]
[ext_resource path="res://Buttons/File/Two2.png" type="Texture" id=10]
[ext_resource path="res://Buttons/File/Three1.png" type="Texture" id=11]
[ext_resource path="res://Buttons/File/Three2.png" type="Texture" id=12]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_top = 10
custom_constants/margin_left = 16
custom_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 10.0
margin_right = 500.0
margin_bottom = 260.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
margin_right = 484.0
margin_bottom = 237.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
margin_top = 241.0
margin_right = 484.0
margin_bottom = 250.0
alignment = 1
script = ExtResource( 2 )

[node name="Exit" type="TextureButton" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
margin_left = 195.0
margin_right = 255.0
margin_bottom = 9.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_click_mask = ExtResource( 5 )
stretch_mode = 2

[node name="File1" type="TextureButton" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
margin_left = 259.0
margin_right = 266.0
margin_bottom = 9.0
disabled = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_disabled = ExtResource( 7 )
texture_click_mask = ExtResource( 8 )

[node name="File2" type="TextureButton" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
margin_left = 270.0
margin_right = 277.0
margin_bottom = 9.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 10 )
texture_click_mask = ExtResource( 8 )

[node name="File3" type="TextureButton" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
margin_left = 281.0
margin_right = 288.0
margin_bottom = 9.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_disabled = ExtResource( 12 )
texture_click_mask = ExtResource( 8 )
[connection signal="change_file" from="MarginContainer/VBoxContainer2/HBoxContainer" to="." method="_on_HBoxContainer_change_file"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/File1" to="MarginContainer/VBoxContainer2/HBoxContainer" method="_on_File1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/File2" to="MarginContainer/VBoxContainer2/HBoxContainer" method="_on_File2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/File3" to="MarginContainer/VBoxContainer2/HBoxContainer" method="_on_File3_pressed"]
